[build-system]
requires = [
    "setuptools >= 67.6.0",
    "wheel >= 0.38",
]
build-backend = "setuptools.build_meta"


[project]
name = "async-ip-rotator"
version = "0.1.0"
authors = [{ name = "Jakub Pruzinec", email = "j.pruzinec@gmail.com" }]
description = "Async IP Rotator ofuscates your requests' IP via AWS gateways."
readme = "README.md"
requires-python = ">=3"
dependencies = [
    "aiohttp",
    "aioboto3",
]